# hg-platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: B1-03_layer1_identity.py  B1-04_enable_rls_multi_tenancy.py  B1-06_add_invitations_table.py  B1-06b_enable_rls_on_invitations.py  B1-13_add_contact_inquiries.py  B2-01_create_catalog_career_paths_and_courses.py  B2-02_create_course_progress.py  B2-03_create_enrollments.py  B2-04_assessment_engine.py  LU-01_learning_units_and_events_rename.py  LU-02_video_blocks_use_video_url.py
apps/backend/scripts/: README.md  migrate_videos_to_r2.py
apps/backend/scripts/manifest/: L1.json
apps/backend/src/hg/: __init__.py  celery_app.py  config.py  db.py  main.py
apps/backend/src/hg/core/: auth_middleware.py  deps.py  (+4 more)
apps/backend/tests/: assessment_helpers.py  conftest.py  test_admin_org_metrics.py  test_admin_org_widgets.py  test_admin_users.py  test_assessment_privacy.py  test_assessment_seed.py  test_assessment_session_transaction.py  test_assessment_sessions.py  test_auth.py  test_catalog.py  test_contact_inquiries.py  test_course_progress.py  test_enrollments.py  test_events_redirect.py  test_health.py  test_home_dashboard.py  test_identity_models.py  test_invitations.py  test_learning_units_admin.py  test_learning_units_router.py  test_learning_units_schemas.py  test_learning_units_services.py  test_manager_router.py  test_manager_widgets.py  test_me_update.py  test_me_widgets.py  test_pillar_results_update.py  test_quiz_grading.py  test_rbac.py  test_rls.py  test_scorers_individual.py  test_sync_units_from_drive.py  test_text_block_html_warning.py  test_youtube_helper.py
apps/backend/tests/fixtures/: drive_doc_sample.txt
(+368 files in other folders)
