[project]
name = "hg-backend"
version = "0.1.0"
description = "Human Growth — Backend API (FastAPI + SQLAlchemy + Celery)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Human Growth", email = "tech@humangrowth.app" }]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",

    # DB
    "sqlalchemy>=2.0.32",
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.2",
    "asyncpg>=0.29",

    # Auth / security
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.9",
    "python-multipart>=0.0.9",

    # Caching / queues
    "redis>=5.0",
    "celery[redis]>=5.4",

    # Observability
    "sentry-sdk[fastapi]>=2.13",
    "structlog>=24.4",

    # HTTP / utils
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-slugify>=8.0",
    "orjson>=3.10",

    # Email
    "resend>=2.0",

    # Storage
    "boto3>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis",
    "faker>=28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hg"]

# ─── Ruff ───
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

# ─── Pytest ───
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
pythonpath = ["src"]

# ─── Mypy ───
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src"]
